Final Commit - Portfolio 3.ipynb

--- a/Portfolio 3.ipynb
+++ b/Portfolio 3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Portfolio 3 - Clustering Visualisation"
+    "# Portfolio - Clustering Visualisation"
    ]
   },
   {
